Fixed spacing of sections and header. Added an animated title to about section. Added info to about section.

--- a/index.scss
+++ b/index.scss
@@ -32,6 +32,9 @@ html {
       background-position: center;
       background-attachment: fixed;
       background-size: cover;
+      margin: 0;
+      padding: 1%;
+      height: 5%;
       nav {
         list-style: none;
         list-style-type: none;
@@ -44,7 +47,6 @@ html {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        padding: 1%;
         a {
           text-decoration: none;
           color: inherit;
@@ -79,9 +81,9 @@ html {
     }
 
     section {
-      height: 100%;
+      height: 93%;
       width: 100%;
-      margin-top: 5%;
+      padding-top: 7%;
     }
 
     #home {
@@ -122,15 +124,13 @@ html {
       font-size: 96px;
       margin-top: 5%;
       color: white;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
       h1 {
         text-align: center;
         font-family: "Poppins", sans-serif;
         font-size: 10rem;
         margin: 5%;
+        opacity: 0;
+        transition: opacity 1s;
       }
       h3 {
         font-family: "Hack";
@@ -146,6 +146,15 @@ html {
           transform: rotate(90deg);
           transition: transform 0.5s;
         }
+      }
+      .list {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+      }
+      .opacity-animation {
+        opacity: 100;
       }
       .list-animation {
         opacity: 100;
